--- a/package/linux-firmware/Config.in
+++ b/package/linux-firmware/Config.in
@@ -39,6 +39,11 @@ config BR2_PACKAGE_LINUX_FIRMWARE_IBT
 	  Firmware files for Intel 3160/7260/7265/8260/8265 Wireless
 	  bluetooth support.
 
+config BR2_PACKAGE_LINUX_FIRMWARE_RTL_87XX_BT
+	bool "Realtek 87xx"
+	help
+	  Realtek 8712/8723/8723be
+	  
 config BR2_PACKAGE_LINUX_FIRMWARE_QUALCOMM_6174A_BT
 	bool "Qualcomm Atheros Rome 6174A Bluetooth"
 	help
